--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --bg-color: #ffffff;
   --text-color: #333;
   --border-color: rgba(0, 0, 0, 0.5);
-  --label-color: rgba(173, 216, 230, 0.5);
+  --label-color: #eee;
   --red: #f44336;
   --green: #4caf50;
   --blue: #3f51b5;
@@ -18,7 +18,7 @@
   --bg-color: #222;
   --text-color: #eee;
   --border-color: rgba(255, 255, 255, 0.5);
-  --label-color: rgba(93, 173, 226, 0.5);
+  --label-color: #333;
 }
 
 * {
@@ -59,8 +59,7 @@ button {
 
 textarea {
   padding: 5px;
-  background-color: transparent;
-  border: 1px solid var(--border-color);
+  background-color: var(--label-color);
   color: var(--text-color);
   border-radius: 5px;
   overflow: auto;
@@ -72,6 +71,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .modal .modal-content {
@@ -79,7 +79,8 @@ textarea {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px;
+  width: 500px;
+  max-width: calc(100% - 20px);
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -137,26 +138,33 @@ body {
 
 .header {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 10px;
   background-color: var(--lightblue);
   color: white;
   padding: 10px;
 }
 
-.header .actions {
+.header .main-bar {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
-.header .theme-toggle {
+.header .actions {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.header .actions > button {
   font-size: 1.5rem;
   padding: 0;
   background-color: transparent;
   color: white;
+}
+
+.header .search-btn {
+  display: none;
 }
 
 .search-box {
@@ -176,7 +184,7 @@ body {
   flex: 1;
   padding: 0;
   border: none;
-  color: var(--bg-color);
+  color: #333;
 }
 
 .breadcrumbs {
@@ -197,6 +205,24 @@ body {
   color: var(--text-color);
   font-size: 1rem;
   white-space: nowrap;
+}
+
+.search-bar {
+  display: none;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.search-bar .exit,
+.search-bar .clear {
+  font-size: 1.5rem;
+  background-color: transparent;
+  color: white;
+}
+
+.search-bar .search-box {
+  flex: 1;
 }
 
 .action-bar {
@@ -220,7 +246,7 @@ body {
 .item-container {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   gap: 5px;
   padding: 10px;
 }
@@ -236,10 +262,11 @@ body {
   border: 1px solid transparent;
   border-radius: 5px;
   cursor: pointer;
+  height: max-content;
 }
 
 .item-container .item.selected {
-  border-color: var(--border-color)
+  border-color: var(--border-color);
 }
 
 .item-container .item * {
@@ -249,19 +276,33 @@ body {
   margin-bottom: 2px;
 }
 
-.text-modal .icon-input {
+.item-container .item p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 0.8rem;
+  max-height: 40px;
+}
+
+.item-modal .name-input {
+  flex: 1;
+  background-color: transparent;
+  color: var(--text-color);
+}
+
+.item-modal .icon-input {
   display: inline-flex;
   cursor: pointer;
 }
 
-.text-modal .icon-input img {
+.item-modal .icon-input img {
   width: 32px;
   height: 32px;
 }
 
-.text-modal .content-input {
+.item-modal .content-input {
   resize: none;
-  height: 200px;
+  height: 225px;
+  font-size: 1rem;
 }
 
 .folder-modal .icon-input {
@@ -275,6 +316,7 @@ body {
 }
 
 .toast-container {
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -287,7 +329,7 @@ body {
 }
 
 .toast {
-  background-color: var(--text-color);
+  background-color: var(--border-color);
   color: var(--bg-color);
   padding: 12px 20px;
   border-radius: 5px;
@@ -297,10 +339,27 @@ body {
 
 /* Medium screens (Tablets, up to 768px wide) */
 @media (max-width: 768px) {
- 
 }
 
 /* Small screens (Phones, up to 480px wide) */
 @media (max-width: 480px) {
+  .header .title {
+    font-size: 1.5rem;
+  }
 
+  .header .actions .search-box {
+    display: none;
+  }
+
+  .header .search-btn {
+    display: inline-flex;
+  }
+
+  .header.search .main-bar {
+    display: none;
+  }
+
+  .header.search .search-bar {
+    display: flex;
+  }
 }
